--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
 
         // Set initial camera position
-        camera.position.set(0, 1.2, 0); // x, y, z
+        camera.position.set(0, 1.2, 3); // x, y, z
         const raycaster = new THREE.Raycaster();
         const mouse = new THREE.Vector2();
 
@@ -106,7 +106,7 @@
         loader.load('./static/assets/small_cabin.glb', function (gltf) {
 
             // Position the model
-            const position = { x: -0.15, y: -2.27, z: 1.3 }; // x = left/right y = -up/+down z = +front/-back
+            const position = { x: -0.25, y: -2.27, z: 1.3 }; // x = left/right y = -up/+down z = +front/-back
             gltf.scene.position.set(position.x, position.y, position.z);
 
             // Rotate the model counterclockwise 90 degrees around the y-axis
@@ -123,7 +123,7 @@
 
         loader.load('./static/assets/synth.glb', function (gltf) {
             // Position the model
-            const position = { x: 0, y: 0, z: 0 };
+            const position = { x: -.08, y: 0, z: 0 };
             const scale = .2; // Change this value to scale the model
             gltf.scene.scale.set(scale, scale, scale);
             gltf.scene.position.set(position.x, position.y, position.z);
@@ -412,7 +412,7 @@
                 tempoText = new THREE.Mesh(textGeometry, textMaterial);
                 tempoText.rotation.x = rotation;
                 tempoText.scale.set(scale, scale, scale);
-                tempoText.position.set(0.01, 0.044, -0.03); //position.set(left/right, in/out, up/down)
+                tempoText.position.set(-0.07, 0.044, -0.03); //position.set(left/right, in/out, up/down)
                 scene.add(tempoText);
             }
             if (textToUpdate === 'volume' || textToUpdate === 'all') {
@@ -420,7 +420,7 @@
                 volumeText = new THREE.Mesh(textGeometry, textMaterial);
                 volumeText.rotation.x = rotation;
                 volumeText.scale.set(scale, scale, scale);
-                volumeText.position.set(0.08, 0.044, -0.03);
+                volumeText.position.set(0, 0.044, -0.03);
                 scene.add(volumeText);
             }
             if (textToUpdate === 'sequence' || textToUpdate === 'all') {
@@ -428,7 +428,7 @@
                 sequenceText = new THREE.Mesh(textGeometry, textMaterial);
                 sequenceText.rotation.x = rotation;
                 sequenceText.scale.set(.0085, .0085, .0085);
-                sequenceText.position.set(0.005, 0.044, -0.05);
+                sequenceText.position.set(-0.075, 0.044, -0.05);
                 scene.add(sequenceText);
             }
             if (textToUpdate === 'synth' || textToUpdate === 'all') {
@@ -436,7 +436,7 @@
                 synthText = new THREE.Mesh(textGeometry, textMaterial);
                 synthText.rotation.x = rotation;
                 synthText.scale.set(.0085, .0085, .0085);
-                synthText.position.set(0.04, 0.044, -0.07);
+                synthText.position.set(-0.04, 0.044, -0.07);
                 scene.add(synthText);
             }
         }
